Actualización en indexq.html: Norkis - Pollo a la Brasa

--- a/Brayan_Prueba/indexq.html
+++ b/Brayan_Prueba/indexq.html
@@ -23,7 +23,7 @@
             <h2>Nuestro Menú</h2>
             <div class="product-grid">
                 <div class="product">
-                    <img src="pollo.jpg" alt="Pollo a la brasa">
+                    <img src="pollo.jpg" alt="Norkis">
                     <h3>Pollo a la Brasa</h3>
                     <p>Delicioso pollo a la brasa acompañado de papas fritas y ensalada.</p>
                     <span>S/ 45.00</span>
