--- a/Renso/indenR.html
+++ b/Renso/indenR.html
@@ -1,44 +1,78 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interfaz Bootstrap GoZu</title>
+    <meta name="description" content="Interfaz moderna y escalable creada con Bootstrap para proyectos rápidos y estéticos.">
+    <meta name="author" content="GoZu UI Team">
+    <meta name="keywords" content="Bootstrap, UI, diseño web, moderno, escalable">
+    <title>GoZu UI - Interfaz Bootstrap</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Iconos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <style>
+        /* Estilos personalizados */
         body {
             background-color: #f8f9fa;
+            font-family: 'Arial', sans-serif;
         }
+
         .hero {
             background: linear-gradient(135deg, #6c757d, #343a40);
             color: #fff;
-            padding: 80px 20px;
+            padding: 100px 20px;
             text-align: center;
         }
+
         .hero h1 {
-            font-size: 3rem;
-            font-weight: 700;
+            font-size: 3.5rem;
+            font-weight: bold;
         }
+
         .hero p {
-            font-size: 1.2rem;
+            font-size: 1.3rem;
+            margin-bottom: 30px;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            transition: all 0.3s ease-in-out;
+        }
+
+        footer {
+            background: #212529;
+            color: #adb5bd;
+        }
+
+        footer a {
+            color: #0d6efd;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">GoZu UI</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container">
+            <a class="navbar-brand" href="#" aria-label="Inicio de GoZu UI">
+                <i class="bi bi-bootstrap"></i> GoZu UI
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Abrir menú">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Inicio</a>
+                        <a class="nav-link active" href="#" aria-current="page">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Acerca de</a>
@@ -58,39 +92,39 @@
     <section class="hero">
         <div class="container">
             <h1>Bienvenido a GoZu UI</h1>
-            <p>Una interfaz moderna y flexible diseñada con Bootstrap.</p>
-            <a href="#" class="btn btn-primary btn-lg mt-3">Comenzar</a>
+            <p>Descubre una interfaz moderna, flexible y colorida diseñada con Bootstrap.</p>
+            <a href="#" class="btn btn-primary btn-lg">Explorar ahora</a>
         </div>
     </section>
 
-    <!-- Contenido -->
+    <!-- Contenido principal -->
     <section class="py-5">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card shadow">
+                    <div class="card shadow border-0">
                         <div class="card-body">
-                            <i class="bi bi-lightning-fill text-primary" style="font-size: 2rem;"></i>
+                            <i class="bi bi-lightning-fill text-primary" style="font-size: 2.5rem;"></i>
                             <h5 class="card-title mt-3">Rápido</h5>
-                            <p class="card-text">Diseñado para ofrecer una experiencia fluida y rápida en cualquier dispositivo.</p>
+                            <p class="card-text">Ofrecemos una experiencia fluida y veloz en cualquier dispositivo.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card shadow">
+                    <div class="card shadow border-0">
                         <div class="card-body">
-                            <i class="bi bi-layers-fill text-success" style="font-size: 2rem;"></i>
+                            <i class="bi bi-layers-fill text-success" style="font-size: 2.5rem;"></i>
                             <h5 class="card-title mt-3">Escalable</h5>
-                            <p class="card-text">Ideal para proyectos pequeños y grandes, adaptable a tus necesidades.</p>
+                            <p class="card-text">Perfecto para proyectos de cualquier tamaño, adaptándose a tus necesidades.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card shadow">
+                    <div class="card shadow border-0">
                         <div class="card-body">
-                            <i class="bi bi-heart-fill text-danger" style="font-size: 2rem;"></i>
+                            <i class="bi bi-heart-fill text-danger" style="font-size: 2.5rem;"></i>
                             <h5 class="card-title mt-3">Estético</h5>
-                            <p class="card-text">Un diseño moderno y atractivo para mejorar la experiencia visual.</p>
+                            <p class="card-text">Un diseño atractivo para una experiencia visual única.</p>
                         </div>
                     </div>
                 </div>
@@ -99,11 +133,17 @@
     </section>
 
     <!-- Pie de página -->
-    <footer class="bg-dark text-white text-center py-3">
-        <p class="mb-0">© 2024 GoZu UI. Todos los derechos reservados.</p>
+    <footer class="text-center py-4">
+        <div class="container">
+            <p class="mb-2">© 2024 GoZu UI. Todos los derechos reservados.</p>
+            <p>
+                <a href="#">Política de privacidad</a> | <a href="#">Términos de uso</a>
+            </p>
+        </div>
     </footer>
 
-    <!-- Bootstrap JS -->
+    <!-- Scripts Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
