Modifcación del Codigo de Brayan

--- a/Brayan_Prueba/indexq.html
+++ b/Brayan_Prueba/indexq.html
@@ -24,7 +24,7 @@
             <div class="product-grid">
                 <div class="product">
                     <img src="pollo.jpg" alt="Norkis">
-                    <h3>Pollo a la Brasa</h3>
+                    <h3>Pollo al Vapor </h3>
                     <p>Delicioso pollo a la brasa acompañado de papas fritas y ensalada.</p>
                     <span>S/ 45.00</span>
                 </div>
